# orange-oasys

./: README.md  pyproject.toml  setup.py
orangeoasys/: __init__.py
orangeoasys/util/: oasys_util.py  random_distributions.py  scanning_gui.py
orangeoasys/util/script/: itemmodels.py  variable.py
orangeoasys/widgets/: gui.py  owaction.py  widget.py
orangeoasys/widgets/abstract/scanning/: abstract_scan_file_node_point.py  abstract_scan_node_point.py  abstract_scan_variable_node_point.py
orangeoasys/widgets/loop_management/: __init__.py  ow_node_point.py  ow_pin.py
orangeoasys/widgets/scanning/: __init__.py  ow_scan_file_node_point.py  ow_scan_variable_node_point.py
orangeoasys/widgets/tools/: OWHdf5FileReader.py  __init__.py  ow_hdf5_file_reader.py  ow_python_script.py  ow_surface_file_merger.py  ow_surface_file_reader.py
